# Virtual_Port_And_QT6

./: .gitignore  README.md
ros2_ws/src/virtual_gps/: package.xml  setup.cfg  setup.py
ros2_ws/src/virtual_gps/virtual_gps/: gps_publisher.py  gps_subscriber.py
ros2_ws/virtual_gps_dashboard/: CMakeLists.txt  package.xml
ros2_ws/virtual_gps_dashboard/src/: main.cpp  main_window.cpp  main_window.hpp  main_window.ui
